##
## autogenerated ChangeLog -- don't edit
##

2008-08-02 Saturday 19:42  Rocky Bernstein <rocky@gnu.org>

	* Makefile.am, dbg-main.inc.in, command/Makefile.am,
	  command/handle.cmd, command/signal.cmd, lib/Makefile.am,
	  lib/complete.inc, lib/info.inc, lib/sig.inc: More of the same as
	  before

2008-08-02 Saturday 19:14  Rocky Bernstein <rocky@gnu.org>

	* dbg-fns.inc, dbg-main.inc.in, dbg-stack.inc, command/Makefile.am,
	  lib/Makefile.am, lib/fns.inc, lib/stack.inc,
	  test/unit/test-fns.sh.in: More to lib. Fix install command
	  location (singular now, not plural). Should work when installed
	  now.

2008-08-02 Saturday 18:57  Rocky Bernstein <rocky@gnu.org>

	* Makefile.am, dbg-main.inc.in, command/Makefile.am,
	  command/backtrace.cmd, command/break.cmd, command/commands.cmd,
	  command/condition.cmd, command/continue.cmd, command/delete.cmd,
	  command/disable.cmd, command/enable.cmd, command/frame.cmd,
	  command/help.cmd, command/kill.cmd, command/undisplay.cmd,
	  lib/Makefile.am, lib/brk.inc, lib/commands.inc, lib/help.inc,
	  lib/info.inc, test/unit/.cvsignore, test/unit/test-stack.sh.in:
	  More command files. More files moved into lib.

2008-08-02 Saturday 18:24  Rocky Bernstein <rocky@gnu.org>

	* Makefile.am, dbg-commands.inc, dbg-complete.inc, dbg-log.inc,
	  dbg-main.inc.in, dbg-processor.inc, dbg-sig.inc, dbg-tracefn.inc,
	  lib/.cvsignore, lib/Makefile.am, lib/commands.inc,
	  lib/complete.inc, lib/log.inc, lib/processor.inc, lib/sig.inc,
	  lib/tracefn.inc, test/sig.right, test/unit/test-bashdb-trace.sh,
	  test/unit/test-bashdb-trace.sh.in: Move more files around.

2008-08-02 Saturday 17:56  Rocky Bernstein <rocky@gnu.org>

	* lib/Makefile.am: Forgot to add Makefile.am for new lib directory

2008-08-02 Saturday 17:38  Rocky Bernstein <rocky@gnu.org>

	* Makefile.am, configure.ac, dbg-brk.inc, dbg-edit.inc,
	  dbg-file.inc, dbg-help.inc, dbg-hist.inc, dbg-list.inc,
	  dbg-main.inc.in, dbg-processor.inc, dbg-set-d-vars.inc,