@@ -1,4 +1,4 @@
-# $Id: check-common.sh.in,v 1.2 2008/08/09 02:36:18 rockyb Exp $
+# $Id: check-common.sh.in,v 1.3 2008/08/09 11:20:58 rockyb Exp $
 # -*- shell-script -*-
 
 srcdir=@srcdir@
@@ -12,7 +12,7 @@ BASH=$THIS_SH
 
 TOP_BUILDDIR=@abs_top_builddir@
 
-export BASH TOP_BUILDDIR
+export BASH TOP_BUILDDIR srcdir builddir
 
 check_output() {
   testfile="$1"
