@@ -5,7 +5,7 @@
 +# Do we give a valid stack listing initially?
 +where 
 ->0 in file `hanoi.sh' at line 31
-##1 source("hanoi.sh") called from file `bashdb' at line 282
+##1 source("hanoi.sh") called from file `bashdb' at line 292
 ##2 main() called from file `bashdb' at line 0
 +# How about after a frame command?
 +frame 0
@@ -13,56 +13,56 @@
 31:	typeset -i max=3
 +back 
 ->0 in file `hanoi.sh' at line 31
-##1 source("hanoi.sh") called from file `bashdb' at line 282
+##1 source("hanoi.sh") called from file `bashdb' at line 292
 ##2 main() called from file `bashdb' at line 0
 +where 
 ->0 in file `hanoi.sh' at line 31
-##1 source("hanoi.sh") called from file `bashdb' at line 282
+##1 source("hanoi.sh") called from file `bashdb' at line 292
 ##2 main() called from file `bashdb' at line 0
 +# How about after moving?
 +u 
-(bashdb:282):
-282:	  . "$_source_file"
+(bashdb:292):
+292:	  . "$_source_file"
 +where 
 ##0 in file `hanoi.sh' at line 31
-->1 source("hanoi.sh") called from file `bashdb' at line 282
+->1 source("hanoi.sh") called from file `bashdb' at line 292
 ##2 main() called from file `bashdb' at line 0
 +down 
 (hanoi.sh:31):
 31:	typeset -i max=3
 +where 
 ->0 in file `hanoi.sh' at line 31
-##1 source("hanoi.sh") called from file `bashdb' at line 282
+##1 source("hanoi.sh") called from file `bashdb' at line 292
 ##2 main() called from file `bashdb' at line 0
 +# Try moving past the end
 +do 
 Would be beyond bottom-most (most recent) entry.
 +where 
 ->0 in file `hanoi.sh' at line 31
-##1 source("hanoi.sh") called from file `bashdb' at line 282
+##1 source("hanoi.sh") called from file `bashdb' at line 292
 ##2 main() called from file `bashdb' at line 0
 +up 2
 Would be beyond top-most (least recent) entry.
 +bt 
 ->0 in file `hanoi.sh' at line 31
-##1 source("hanoi.sh") called from file `bashdb' at line 282
+##1 source("hanoi.sh") called from file `bashdb' at line 292
 ##2 main() called from file `bashdb' at line 0
 +# Try some negative numbers
 +# should be the same as up
 +down -1
-(bashdb:282):
-282:	  . "$_source_file"
+(bashdb:292):
+292:	  . "$_source_file"
 +T 
 ##0 in file `hanoi.sh' at line 31
-->1 source("hanoi.sh") called from file `bashdb' at line 282
+->1 source("hanoi.sh") called from file `bashdb' at line 292
 ##2 main() called from file `bashdb' at line 0
 +# Should to to least recent frame
 +frame -1
-(bashdb:282):
-282:	  . "$_source_file"
+(bashdb:292):
+292:	  . "$_source_file"
 +where 
 ##0 in file `hanoi.sh' at line 31
-->1 source("hanoi.sh") called from file `bashdb' at line 282
+->1 source("hanoi.sh") called from file `bashdb' at line 292
 ##2 main() called from file `bashdb' at line 0
 +# Let's add another stack entry
 +continue hanoi
@@ -72,16 +72,16 @@ One-time breakpoint 1 set in file hanoi.sh, line 13.
 +where 
 ->0 in file `hanoi.sh' at line 13
 ##1 hanoi("3", "a", "b", "c") called from file `hanoi.sh' at line 43
-##2 source("hanoi.sh") called from file `bashdb' at line 282
+##2 source("hanoi.sh") called from file `bashdb' at line 292
 ##3 main() called from file `bashdb' at line 0
 +# Again least recent stack entry
 +frame -1
-(bashdb:282):
-282:	  . "$_source_file"
+(bashdb:292):
+292:	  . "$_source_file"
 +where 
 ##0 in file `hanoi.sh' at line 13
 ##1 hanoi("3", "a", "b", "c") called from file `hanoi.sh' at line 43
-->2 source("hanoi.sh") called from file `bashdb' at line 282
+->2 source("hanoi.sh") called from file `bashdb' at line 292
 ##3 main() called from file `bashdb' at line 0
 +# Most recent stack entry
 +frame +0
@@ -90,9 +90,9 @@ One-time breakpoint 1 set in file hanoi.sh, line 13.
 +backtrace 
 ->0 in file `hanoi.sh' at line 13
 ##1 hanoi("3", "a", "b", "c") called from file `hanoi.sh' at line 43
-##2 source("hanoi.sh") called from file `bashdb' at line 282
+##2 source("hanoi.sh") called from file `bashdb' at line 292
 ##3 main() called from file `bashdb' at line 0
 +up 2
-(bashdb:282):
-282:	  . "$_source_file"
+(bashdb:292):
+292:	  . "$_source_file"
 +quit 
