@@ -9,7 +9,7 @@
 +### Try a simple stack command...
 +where 
 ->0 in file `parm.sh' at line 26
-##1 source("parm.sh") called from file `bashdb' at line 282
+##1 source("parm.sh") called from file `bashdb' at line 292
 ##2 main() called from file `bashdb' at line 0
 +step 2
 (parm.sh:3):
@@ -17,7 +17,7 @@
 +where 
 ->0 in file `parm.sh' at line 3
 ##1 fn1("5") called from file `parm.sh' at line 27
-##2 source("parm.sh") called from file `bashdb' at line 282
+##2 source("parm.sh") called from file `bashdb' at line 292
 ##3 main() called from file `bashdb' at line 0
 +### Try printing a dollar variable...
 +p $1
@@ -49,7 +49,7 @@ $1 at line 4 has value 0
 ##5 fn1("3") called from file `parm.sh' at line 10
 ##6 fn1("4") called from file `parm.sh' at line 10
 ##7 fn1("5") called from file `parm.sh' at line 27
-##8 source("parm.sh") called from file `bashdb' at line 282
+##8 source("parm.sh") called from file `bashdb' at line 292
 ##9 main() called from file `bashdb' at line 0
 +p "dollar 1: $1"
 dollar 1: testing 1
@@ -84,7 +84,7 @@ fn2 started
 ##4 fn1("3") called from file `parm.sh' at line 10
 ##5 fn1("4") called from file `parm.sh' at line 10
 ##6 fn1("5") called from file `parm.sh' at line 27
-##7 source("parm.sh") called from file `bashdb' at line 282
+##7 source("parm.sh") called from file `bashdb' at line 292
 ##8 main() called from file `bashdb' at line 0
 +return 
 (parm.sh:11):
@@ -96,7 +96,7 @@ fn2 started
 ##3 fn1("3") called from file `parm.sh' at line 10
 ##4 fn1("4") called from file `parm.sh' at line 10
 ##5 fn1("5") called from file `parm.sh' at line 27
-##6 source("parm.sh") called from file `bashdb' at line 282
+##6 source("parm.sh") called from file `bashdb' at line 292
 ##7 main() called from file `bashdb' at line 0
 +return 
 (parm.sh:11):
@@ -107,7 +107,7 @@ fn2 started
 ##2 fn1("3") called from file `parm.sh' at line 10
 ##3 fn1("4") called from file `parm.sh' at line 10
 ##4 fn1("5") called from file `parm.sh' at line 27
-##5 source("parm.sh") called from file `bashdb' at line 282
+##5 source("parm.sh") called from file `bashdb' at line 292
 ##6 main() called from file `bashdb' at line 0
 +return 
 (parm.sh:11):
@@ -119,7 +119,7 @@ fn2 started
 ->0 in file `parm.sh' at line 11
 ##1 fn1("4") called from file `parm.sh' at line 10
 ##2 fn1("5") called from file `parm.sh' at line 27
-##3 source("parm.sh") called from file `bashdb' at line 282
+##3 source("parm.sh") called from file `bashdb' at line 292
 ##4 main() called from file `bashdb' at line 0
 +### * Testing that exit status preserved on eval and print...
 +c 29
