@@ -46,7 +46,7 @@ SOURCED BASH_SOURCE[0] dbg-test1.sub
 SOURCED FN LINENO 5
 FUNCNAME[0]: sourced_fn called from dbg-test1.sub at line 22
 FUNCNAME[1]: source called from dbg-test1.sh at line 34
-FUNCNAME[2]: source called from bashdb at line 282
+FUNCNAME[2]: source called from bashdb at line 292
 FUNCNAME[3]: main called from bashdb at line 0
 Debugged program terminated normally. Use q to quit or R to restart.
 +### Try some commands that require a running debugger
