@@ -1,18 +1,27 @@
-#!/bin/sh
+#!/bin/bash
 # -*- shell-script -*-
-#$Id: test-watch1,v 1.3 2008/08/09 02:36:19 rockyb Exp $
+#$Id: test-watch1,v 1.4 2008/08/09 11:20:58 rockyb Exp $
 
 [ -z "$srcdir" ] && srcdir=$PWD
 [ -z "$builddir" ] && builddir=$PWD
+export srcdir builddir
 
 TEST_NAME='watch1'
-
 . ${builddir}/check-common.sh
 
+TEST_FILTERED_FILE="/tmp/${TEST_NAME}-filtered.check"
+RIGHT_FILTERED_FILE="/tmp/${TEST_NAME}-filtered.right"
 debugged_script="$srcdir/dbg-test1.sh"
 (cd $srcdir && run_debugger $debugged_script 2>&1 >$TEST_FILE </dev/null)
+grep -v '^Restarting with' $RIGHT_FILE >${RIGHT_FILTERED_FILE}
+grep -v '^Restarting with' $TEST_FILE  >${TEST_FILTERED_FILE}
 
-check_output $TEST_FILE $RIGHT_FILE
+check_output $TEST_FILTERED_FILE ${RIGHT_FILTERED_FILE}
+rc=$? 
+if ((0 == rc)) ; then
+  rm -f $TEST_FILE
+  rm -f $RIGHT_FILTERED_FILE
+fi
 
 # Return code tells testing mechanism whether passed or not.
-exit $?
+exit $rc
