@@ -1,6 +1,6 @@
-#!/bin/sh
+#!/bin/bash
 # -*- shell-script -*-
-#$Id: test-watch2,v 1.3 2008/08/09 02:36:19 rockyb Exp $
+#$Id: test-watch2,v 1.4 2008/08/09 11:20:58 rockyb Exp $
 
 [ -z "$srcdir" ] && srcdir=$PWD
 [ -z "$builddir" ] && builddir=$PWD
