@@ -2,6 +2,16 @@
 ## autogenerated ChangeLog -- don't edit
 ##
 
+2008-08-02 Saturday 22:50  Rocky Bernstein <rocky@gnu.org>
+
+	* .cvsignore, Makefile.am, configure.ac, dbg-file.inc,
+	  dbg-info.inc, dbg-pre.inc.in, builtin/.cvsignore,
+	  command/Makefile.am, command/edit.cmd, command/file.cmd,
+	  command/handle.cmd, command/set.cmd, command/show.cmd,
+	  command/signal.cmd, command/watch.cmd, lib/.cvsignore,
+	  lib/Makefile.am, lib/brk.inc, lib/file.inc, lib/pre.inc.in,
+	  lib/set.inc, lib/show.inc: See above.
+
 2008-08-02 Saturday 19:42  Rocky Bernstein <rocky@gnu.org>
 
 	* Makefile.am, dbg-main.inc.in, command/Makefile.am,
